Resolves: fdo#82219 color graphics as black and white

i.e. revert

commit bb5c7d6a79309236d4f19bb2498f2e850f735a2f
Date:   Sun Apr 13 01:42:27 2014 +1000

    fdo#38844 Reduce XOR clipping for gradients

    Removed XOR clipping version of ClipAndDrawGradientMetafile. Because it
    has been removed, the other version isn't really needed in it's own
    function so I've moved it back into DrawGradient.

    Change-Id: Ib1519a019061c8c71183db63e5c11681bcad4cc4

(cherry picked from commit e2883ca86f747eb62d1fe9e9b8d115c689e3abd7)
Reviewed-on: https://gerrit.libreoffice.org/13773
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>
(cherry picked from commit 938deff2a1e5451fd5493520480ae3c9615af3f9)
Signed-off-by: Michael Stahl <mstahl@redhat.com>

Conflicts:
	vcl/source/outdev/gradient.cxx

Change-Id: Iff1cb48cb8fa6d29937cf228a57aea9e8072110c
Reviewed-on: https://gerrit.libreoffice.org/13804
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>