vcl/source/gdi/print.cxx
@@ -1812,6 +1812,16 @@ bool Printer::UsePolyPolygonForComplexGradient()
     return true;
 }
 
+void Printer::ClipAndDrawGradientMetafile ( const Gradient &rGradient, const PolyPolygon &rPolyPoly )
+{
+    const Rectangle aBoundRect( rPolyPoly.GetBoundRect() );
+
+    Push( PUSH_CLIPREGION );
+    IntersectClipRegion(Region(rPolyPoly));
+    DrawGradient( aBoundRect, rGradient );
+    Pop();
+}
+
 void Printer::InitFont() const
 {
     DBG_TESTSOLARMUTEX();
