vcl/source/outdev/gradient.cxx
@@ -84,10 +84,8 @@ void OutputDevice::DrawGradient( const PolyPolygon& rPolyPoly,
                 mpMetaFile->AddAction( new MetaCommentAction( "XGRAD_SEQ_BEGIN" ) );
                 mpMetaFile->AddAction( new MetaGradientExAction( rPolyPoly, rGradient ) );
 
-                Push( PUSH_CLIPREGION );
-                IntersectClipRegion(Region(rPolyPoly));
-                DrawGradient( aBoundRect, rGradient );
-                Pop();
+
+                ClipAndDrawGradientMetafile(rGradient, rPolyPoly);
 
                 mpMetaFile->AddAction( new MetaCommentAction( "XGRAD_SEQ_END" ) );
             }
@@ -160,6 +158,24 @@ void OutputDevice::DrawGradient( const PolyPolygon& rPolyPoly,
 
     if( mpAlphaVDev )
         mpAlphaVDev->DrawPolyPolygon( rPolyPoly );
+}
+
+void OutputDevice::ClipAndDrawGradientMetafile ( const Gradient &rGradient, const PolyPolygon &rPolyPoly )
+{
+    const Rectangle aBoundRect( rPolyPoly.GetBoundRect() );
+    const bool  bOldOutput = IsOutputEnabled();
+
+    EnableOutput( false );
+    Push( PUSH_RASTEROP );
+    SetRasterOp( ROP_XOR );
+    DrawGradient( aBoundRect, rGradient );
+    SetFillColor( COL_BLACK );
+    SetRasterOp( ROP_0 );
+    DrawPolyPolygon( rPolyPoly );
+    SetRasterOp( ROP_XOR );
+    DrawGradient( aBoundRect, rGradient );
+    Pop();
+    EnableOutput( bOldOutput );
 }
 
 namespace
